I added golden moments

--- a/about.html
+++ b/about.html
@@ -28,14 +28,6 @@
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
-
-    <!-- =======================================================
-  * Template Name: Sailor
-  * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/sailor-free-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
   </head>
 
   <body>
@@ -66,7 +58,7 @@
               <img src="assets/img/about.jpg" width="100%" alt="" />
             </div>
             <div class="col-lg-6 pt-5 pt-lg-0">
-              <p>
+              <p style="text-align:justify; line-height:2.0em">
                 SAINT FLAIRS AWARDS LIMITED is the leading company in the Awards, Promotionals, and
                 Specialty products business.
                 <br />
@@ -82,23 +74,25 @@
                 fronting the journey of fulfilment.
               </p>
               <ul>
-                <li>
+                <li style="text-align:justify; line-height:2.0em">
                   <i class="ri-check-double-line"></i> OUR MISSION: To inspire and facilitate
                   success stories through the offering of unique and premium products and services.
                 </li>
-                <li>
+                <li style="text-align:justify; line-height:2.0em">
                   <i class="ri-check-double-line"></i> OUR VISION: To Inspire humanity for the
                   greater good, here and everywhere across the globe.
                 </li>
               </ul>
-              <p>
+              <p style="text-align:justify; line-height:2.0em">
                 Our uniqueness is that we are not just a business, we are a human resources, public
                 relations and institutional protocol resort devoted to arming our partners, those
                 who do business with us with the noblest ways to lead, relate with people and build
                 legacies.
               </p>
             </div>
-            <p class="fst-italic">
+            <p>
+            </p>
+            <p class="fst-italic" style="text-align:justify; line-height:2.0em">
               Saint Flairs Awards Limited is one of the pioneers of corporate awards, and
               recognition business in Nigeria. As an extraordinary organization, Saint Flairs aims
               to inspire growth, progress and healthy competition needed to drive development by
