--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
-  <title>Contact - St Flairs Global Awards</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+    <title>Contact - St Flairs Global Awards</title>
+    <meta content="" name="description" />
+    <meta content="" name="keywords" />
 
     <!-- Google Fonts -->
     <link
@@ -43,21 +43,10 @@
     <main-header></main-header
     ><!-- End Header -->
 
-  <!-- ======= Header ======= -->
-  <main-header></main-header><!-- End Header -->
+    <!-- ======= Header ======= -->
+    <main-header></main-header
+    ><!-- End Header -->
 
-  <main id="main">
-
-    <!-- ======= Breadcrumbs ======= -->
-    <section id="breadcrumbs" class="breadcrumbs">
-      <div class="container">
-
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>Contact</h2>
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Contact</li>
-          </ol>
     <main id="main">
       <!-- ======= Breadcrumbs ======= -->
       <section id="breadcrumbs" class="breadcrumbs">
@@ -78,10 +67,13 @@
         <div class="container">
           <div>
             <iframe
-              style="border: 0; width: 100%; height: 270px"
-              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
-              frameborder="0"
-              allowfullscreen></iframe>
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d492.54643721051946!2d7.470138722933101!3d9.029834997375554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104e0b634e0c28b9%3A0x3871eda85790225b!2sSt%20Flairs%20Awards%20Ltd!5e0!3m2!1sen!2sng!4v1698073289506!5m2!1sen!2sng"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
 
           <div class="row mt-5">
@@ -109,18 +101,16 @@
                 </div>
               </div>
             </div>
-
           </div>
-
         </div>
+      </section>
+      <!-- End Contact Section -->
+    </main>
+    <!-- End #main -->
 
-      </div>
-    </section><!-- End Contact Section -->
-
-  </main><!-- End #main -->
-
-  <!-- ======= Footer ======= -->
-<main-footer></main-footer><!-- End Footer -->
+    <!-- ======= Footer ======= -->
+    <main-footer></main-footer
+    ><!-- End Footer -->
 
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"
       ><i class="bi bi-arrow-up-short"></i
